src/test/deca/syntax/valid/LE/AttTypeClass.deca
//test pour les classes : test valides
//declaration d'un attribut de type d'une autre classe 


class C1 {
    int a ;
}

class C2 {
    float b ;
    C1 essai ;
}