src/test/deca/syntax/invalid/LE/AttSansType.deca
//test invalide
//attribut sans type 

class C1 {
    int a ;
    b ;

}